# predictive-mlops-starter-pack

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  JOURNEY.md  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
deployment/terraform/: apis.tf  github.tf  iam.tf  locals.tf  providers.tf  service_accounts.tf  storage.tf  variables.tf  wif.tf
deployment/terraform/dev/: apis.tf  iam.tf  providers.tf  storage.tf  variables.tf
deployment/terraform/dev/vars/: env.tfvars  env.tfvars.example
deployment/terraform/vars/: env.tfvars  env.tfvars.example
docs/: CONTRIBUTING.md  SETUP.md  TROUBLESHOOTING.md  WALKTHROUGH.md
fraud_detector/: __init__.py  config.py  model.py
fraud_detector/config/: monitoring.yaml  scoring.yaml  training.yaml
fraud_detector/config/sql/: read_features.sql  read_raw_transactions.sql  read_unscored.sql
fraud_detector/pipelines/: __init__.py  scoring_pipeline.py  submit_pipeline.py  training_pipeline.py
fraud_detector/pipelines/components/: data_profile_op.py  evaluate_op.py  feature_engineering_op.py  monitoring_op.py  predict_op.py  register_op.py  train_op.py  write_predictions_op.py
notebooks/: 01_exploratory.ipynb
scripts/: setup_data.py  setup_dev_env.py  test_e2e.py  verify_setup.py
tests/integration/: test_scoring.py
tests/unit/: test_feature_engineering.py  test_monitoring.py  test_training.py
